# echoculture

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  MAINTENANCE.md  README.md  docker-compose.yml  init.sql  populate_db.sh  pyproject.toml  requirements.txt  setup.sh  start_ngrok_fixed.sh  start_tunnels.sh  tunnel_airflow.sh  tunnel_backend.sh
app/: .dockerignore  .gitignore  Dockerfile  rxconfig.py
app/app/: app.py  models.py  state.py
app/assets/: manifest.json  sw.js  synkos.v2.css
dags/: archipop_pipeline.py  dag_bdxc.py  dag_bdxc_expositions.py  dag_bdxc_prices.py  dag_bdxc_spectacles.py  dag_ecrantotal.py  dag_serveo_tunnel.py  maintenance_cleanup.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: normalize_genre.sql
dbt/models/: sources.yml
dbt/models/marts/: fct_concerts.sql  fct_expositions.sql  fct_films.sql  fct_spectacles.sql  fct_today.sql
dbt/models/staging/: stg_events.sql  stg_events.yml  stg_movies.sql  stg_movies.yml
dbt/seeds/: genre_family_map.csv
dbt/tests/: assert_min_price_lte_max_price.sql
scrapers/: archipop_bronze.py  archipop_silver.py  bdxc_pipeline.py  bdxc_prices_pipeline.py  ecrantotal_pipeline.py
spark/jobs/: wikipedia_genre_enrichment.py
sql/: 002_prices.sql  003_cleanup_genres_and_prices.sql  004_price_tag.sql  005_junklive_urls.sql  006_category_column.sql
tests/: test_genre_extraction.py  test_price_extraction.py
utils/: db.py  llm_engine.py  notifications.py  ocr_engine.py
